--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mariadb": "^3.4.5"
+    "mariadb": "^3.4.5",
+    "multer": "^2.0.2"
   }
 }
