--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-vector-icons/evil-icons": "^12.3.0",
     "@react-native-vector-icons/fontawesome6": "^12.2.0",
     "@react-navigation/bottom-tabs": "^7.6.0",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.0",
     "@react-navigation/stack": "^7.6.1",
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.20",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "memoize-one": "^6.0.0",
     "react": "19.1.0",
@@ -25,6 +30,7 @@
     "react-native": "0.81.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
