implement task card, task delete

--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.20",
+    "expo-file-system": "~19.0.19",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
+    "expo-print": "~15.0.7",
+    "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "memoize-one": "^6.0.0",
     "react": "19.1.0",
